--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
     <h2 class="visually-hidden">Карточки товаров</h2>
     <ul class="catalog-products__list">
       <li class="catalog-products__item card-product">
-        <a class="card-product__link" href="#"><h2 class="card-product__title heading--level_3">Зайчик-попрыгайчик</h2></a>
+        <a class="card-product__link" href="#"><h2 class="card-product__title heading heading--level_3">Зайчик-попрыгайчик</h2></a>
         <a href="#"><img class="card-product__image" src="img/catalog/bunny-mobile.jpg" width="260" height="195" alt="Вязанный зайчик-попрыгайчик голубого цвета."></a>
         <dl class="card-product__list description-list">
           <dt class="description-list__name">Рост</dt>
@@ -18,13 +18,13 @@
           <dt class="description-list__name">вес</dt>
           <dd class="description-list__value">200 г</dd>
         </dl>
-        <p class="card-product__price product-price">
-          <span class="product-price__value">1200 руб.</span>
-          <button class="product-price__button" type="button"><span class="visually-hidden">Добавить в корзину</span></button>
+        <p class="card-product__price price-of-item">
+          <span class="price-of-item__value">1200 руб.</span>
+          <button class="price-of-item__button" type="button"><span class="visually-hidden">Добавить в корзину</span></button>
         </p>
       </li>
       <li class="catalog-products__item card-product">
-        <a class="card-product__link" href="#"><h2 class="card-product__title heading--level_3">Корзинка для белья</h2></a>
+        <a class="card-product__link" href="#"><h2 class="card-product__titl heading heading--level_3">Корзинка для белья</h2></a>
         <a href="#"><img class="card-product__image" src="img/catalog/laundry-basket-mobile.jpg" width="260" height="195" alt="Вязанная корзина наполненная полотенцами."></a>
         <dl class="card-product__list description-list">
           <dt class="description-list__name">Диаметр</dt>
@@ -32,13 +32,13 @@
           <dt class="description-list__name">высота</dt>
           <dd class="description-list__value">10 см</dd>
         </dl>
-        <p class="card-product__price product-price">
-          <span class="product-price__value">690 руб.</span>
-          <button class="product-price__button" type="button"><span class="visually-hidden">Добавить в корзину</span></button>
+        <p class="card-product__price price-of-item">
+          <span class="price-of-item__value">690 руб.</span>
+          <button class="price-of-item__button" type="button"><span class="visually-hidden">Добавить в корзину</span></button>
         </p>
       </li>
       <li class="catalog-products__item card-product">
-        <a class="card-product__link" href="#"><h2 class="card-product__title heading--level_3">Большая корзинка для игрушек</h2></a>
+        <a class="card-product__link" href="#"><h2 class="card-product__title heading heading--level_3">Большая корзинка для игрушек</h2></a>
         <a href="#"><img class="card-product__image" src="img/catalog/toy-basket-mobile.jpg" width="260" height="195" alt="Вязанная корзина наполненная мягкими игрушками."></a>
         <dl class="card-product__list description-list">
           <dt class="description-list__name">Диаметр</dt>
@@ -46,23 +46,23 @@
           <dt class="description-list__name">высота</dt>
           <dd class="description-list__value">30 см</dd>
         </dl>
-        <p class="card-product__price product-price">
-          <span class="product-price__value">1500 руб.</span>
-          <button class="product-price__button" type="button"><span class="visually-hidden">Добавить в корзину</span></button>
+        <p class="card-product__price price-of-item">
+          <span class="price-of-item__value">1500 руб.</span>
+          <button class="price-of-item__button" type="button"><span class="visually-hidden">Добавить в корзину</span></button>
         </p>
       </li>
     </ul>
   </section>
   <article class="catalog-page__production production">
     <div class="production__container">
-      <h2 class="production__title">Процесс производства</h2>
+      <h2 class="production__title heading heading--level_3">Процесс производства</h2>
       <div class="production__video preview">
         <img class="preview__image" src="img/catalog/video-mobile.jpg"  width="260" height="195" alt="Тут должно быть интересное видео.">
         <button class="preview__button" type="button"></button>
       </div>
       <p class="production__content video-description">
         <span class="video-description__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</span>
-        <a class="video-description__button" href="#">Сделать заказ</a>
+        <a class="video-description__button button" href="#">Сделать заказ</a>
       </p>
     </div>
   </article>
