--- a/source/index.html
+++ b/source/index.html
@@ -19,11 +19,11 @@
       </ul>
     </div>
   </section>
-  <section class="featured line-decor__bottom">
+  <section class="featured line-decor line-decor--bottom">
     <div class="featured__container">
       <h2 class="visually-hidden">Описание</h2>
       <div class="featured__product product">
-        <h3 class="product__title heading--level_2">Вязаные корзинки</h3>
+        <h3 class="product__title heading heading--level_2">Вязаные корзинки</h3>
         <span class="product__label card-label">Товар недели</span>
         <p class="product__description">
           Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх размерах.
@@ -47,7 +47,7 @@
   </section>
   <section class="about">
     <div class="page__centerer">
-      <h2 class="about__title heading--level_2">Коротко о нас:</h2>
+      <h2 class="about__title heading heading--level_2">Коротко о нас:</h2>
       <ul class="about__list advantage">
         <li class="advantage__item">
           <span class="advantage__text advantage__text--icon_flower">Экологически чистые материалы</span>
@@ -70,9 +70,9 @@
       </ul>
     </div>
   </section>
-  <section class="reviews line-decor__bottom">
+  <section class="reviews line-decor line-decor--bottom">
     <div class="page__centerer">
-      <h2 class="reviews__title heading--level_2">Отзывы</h2>
+      <h2 class="reviews__title heading heading--level_2">Отзывы</h2>
       <figure class="reviews__quote quote">
         <blockquote class="quote__text">
           Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
@@ -88,7 +88,7 @@
             <span class="visually-hidden">Следующий отзыв</span>
           </button>
         </div>
-        <a class=" button-reviews__write button" href="#">Написать</a>
+        <a class="button-reviews__write button" href="#">Написать</a>
       </p>
     </div>
   </section>
