--- a/source/index.html
+++ b/source/index.html
@@ -80,15 +80,15 @@
         <figcaption class="quote__author author">Анастасия Красильникова <span class="author__id author-id">@misssssiskras</span></figcaption>
       </figure>
       <p class="reviews__buttons button-reviews">
-        <div class="button-reviews__slider slider-reviews">
-          <button class=" slider-reviews__previous button" type="button">
+        <div class="reviews__slider slider-reviews">
+          <button class=" reviews__previous button" type="button">
             <span class="visually-hidden">Предыдущий отзыв</span>
           </button>
-          <button class=" slider-reviews__next button" type="button">
+          <button class="reviews__next button" type="button">
             <span class="visually-hidden">Следующий отзыв</span>
           </button>
         </div>
-        <a class="button-reviews__write button" href="#">Написать</a>
+        <a class="reviews__write button" href="#">Написать</a>
       </p>
     </div>
   </section>
