добавляет form grid

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -78,7 +78,7 @@
         <h2 class="production__title heading heading--level_3">Процесс производства</h2>
         <span class="production__content video-description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о
             том, как появляются наши товары.</span>
-        <a class="production__button button" href="#">Сделать заказ</a>
+        <a class="production__button button button--size_wide" href="#">Сделать заказ</a>
       </div>
       <div class="production-container__video preview">
         <img class="preview__image" src="img/catalog/video-mobile.jpg" alt="Тут должно быть интересное видео.">
