--- a/source/form.html
+++ b/source/form.html
@@ -4,15 +4,14 @@
 
 {% block main %}
 
-<main class="page__centerer">
+<main>
   <section class="order">
-    <div class="order__container">
       <h1 class="order__title heading header-form">Вязание на заказ</h1>
       <form class="order__form form-order" action="https://echo.htmlacademy.ru" method="post">
         <p class="form-order__text text-form">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-        <fieldset class="form-order__field-type type-form fieldset-border">
-          <legend class="type-form__title label-form">Тип</legend>
-          <ul class="type-form__list">
+        <fieldset class="form-order__field-type type-form fieldset-border fieldset-grid">
+          <legend class="type-form__title label-form fieldset-grid__title">Тип</legend>
+          <ul class="type-form__list fieldset-grid__content">
             <li class="type-form__item">
               <label class="type-form__control">
                 <input class="visually-hidden" type="radio" name="type-product" value="interior" checked>
@@ -27,9 +26,9 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form-order__field-color color-form fieldset-border">
-          <legend class="color-form__title label-form label-form">Цвет</legend>
-          <ul class="color-form__list">
+        <fieldset class="form-order__field-color color-form fieldset-border fieldset-grid">
+          <legend class="color-form__title label-form label-form fieldset-grid__title">Цвет</legend>
+          <ul class="color-form__list fieldset-grid__content">
             <li class="color-form__item">
               <label class="color-form__control">
                 <input class="visually-hidden" type="checkbox" name="color-product" value="white" checked>
@@ -68,9 +67,9 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form-order__field-user user-form fieldset-border">
-          <legend class="user-form__title label-form">фио</legend>
-          <ul class="user-form__list">
+        <fieldset class="form-order__field-user user-form fieldset-border fieldset-grid">
+          <legend class="user-form__title label-form fieldset-grid__title">фио</legend>
+          <ul class="user-form__list fieldset-grid__content">
             <li class="user-form__item">
               <label class="user-form__name" for="name">Имя:</label>
               <input class="user-form__value" type="text" id="name" placeholder="Введите ваше имя">
@@ -85,29 +84,28 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form-order__field-contacts сontact-details fieldset-border">
-          <legend class="сontact-details__title"><span class="visually-hidden">Contact details</span></legend>
-            <ul class="сontact-details__list">
-              <li class="сontact-details__item tel-number">
+        <fieldset class="form-order__field-contacts contact-details fieldset-border">
+          <legend class="contact-details__title"><span class="visually-hidden">Contact details</span></legend>
+            <ul class="contact-details__list  ">
+              <li class="contact-details__item tel-number fieldset-grid">
                 <label class="tel-number__title label-form" for="tel-number">Тел</label>
-                <input class="сontact-details__value" type="tel" name="tel-number" id="tel-number" placeholder="+7 ХХХ ХХХ ХХ ХХ">
+                <input class="contact-details__value fieldset-grid__content" type="tel" name="tel-number" id="tel-number" placeholder="+7 ХХХ ХХХ ХХ ХХ">
               </li>
-              <li class="сontact-details__item email-form">
+              <li class="contact-details__item email-form fieldset-grid">
                 <label class="email-form__title label-form" for="email">e-mail</label>
-                <input class="email-form__value" type="email" id="email" placeholder="Ваш Emai">
+                <input class="email-form__value fieldset-grid__content" type="email" id="email" placeholder="Ваш Emai">
               </li>
             </ul>
         </fieldset>
-        <div class="form-order__field-info info-form">
+        <div class="form-order__field-info info-form fieldset-grid">
           <label class="info-form__title label-form" for="additional-info">Доп</label>
-          <textarea class="info-form__text" name="additional-info" id="additional-info" cols="30" rows="8" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          <textarea class="info-form__text fieldset-grid__content" name="additional-info" id="additional-info" cols="30" rows="8" placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </div>
         <span class="form-order__required-note required-note"><sup>*</sup>Поля обязательны для заполнения</span>
         <div class="form-order__button ">
           <button class="button" type="submit">Отправить заказ</button>
         </div>
       </form>
-    </div>
   </section>
 </main>
 
