--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,7 @@
     </div>
   </section>
   <section class="about">
-    <div class="page__centerer">
+    <div class="page__centerer about__container">
       <h2 class="about__title heading heading--level_2">Коротко о нас:</h2>
       <ul class="about__list advantage">
         <li class="advantage__item">
@@ -76,7 +76,7 @@
     </div>
   </section>
   <section class="reviews line-decor line-decor--bottom">
-    <div class="page__centerer">
+    <div class="reviews__container">
       <h2 class="reviews__title heading heading--level_2">Отзывы</h2>
       <figure class="reviews__quote quote">
         <blockquote class="quote__text">
@@ -110,7 +110,7 @@
         <p class="address__content">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</p>
       </address>
       <div class="contacts__map">
-
+        <script defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
       </div>
       <button class="contacts__button button" type="button">Напишите нам</button>
     </div>
