--- a/source/index.html
+++ b/source/index.html
@@ -101,18 +101,21 @@
     </div>
   </section>
   <article class="contacts">
-    <div class="page__centerer">
-      <h2 class="contacts__title">Контакты</h2>
-      <address class="contacts__address address">
-        <p class="address__email">e-mail:</p>
-        <a class="address__link link-address" href="info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-        <p class="address__title">адрес:</p>
-        <p class="address__content">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</p>
-      </address>
-      <div class="contacts__map">
-        <script defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
-      </div>
-      <button class="contacts__button button" type="button">Напишите нам</button>
+    <h2 class="contacts__title contacts__container ">Контакты</h2>
+    <address class="contacts__address address contacts__container ">
+      <dl class="contacts__list">
+        <dt class="address__email">e-mail:</dt>
+        <dd><a class="address__link link-address" href="info@mimimishkashop.ru">info@mimimishkashop.ru</a></dd>
+        <dt class="address__title">адрес:</dt>
+        <dd class="address__content">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</dd>
+      </dl>
+    </address>
+    <div class="contacts__map">
+      <script defer
+        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>
+    <div class="contacts__button-wrapper contacts__container">
+      <button class="contacts__button button button--size_wide contacts__container " type="button">Напишите нам</button>
     </div>
   </article>
 </main>
