--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
 
 <main class="main-container">
   <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka"</h1>
-  <section class="products page-centerer">
+  <section class="products page__centerer">
     <div class="">
       <h2 class="products__title heading">Милые штуки ручной работы для дома</h2>
       <ul class="products__list products-list ">
