--- a/source/index.html
+++ b/source/index.html
@@ -19,10 +19,10 @@
       </ul>
     </div>
   </section>
-  <section class="featured line-decor line-decor--bottom">
-    <div class="featured__container page-centerer">
+  <section class="featured line-decor line-decor--bottom page__centerer">
+    <div class="featured__container ">
       <h2 class="visually-hidden">Описание</h2>
-      <div class="featured__product product">
+      <div class="featured__product product page__centerer">
         <h3 class="product__title heading heading--level_2">Вязаные корзинки</h3>
         <span class="product__label card-label">Товар недели</span>
         <div class="product__description-container">
@@ -51,7 +51,7 @@
     </div>
   </section>
   <section class="about">
-    <div class="page__centerer about__container">
+    <div class="about__container page__centerer">
       <h2 class="about__title heading heading--level_2">Коротко о нас:</h2>
       <ul class="about__list advantage">
         <li class="advantage__item">
@@ -76,7 +76,7 @@
     </div>
   </section>
   <section class="reviews line-decor line-decor--bottom">
-    <div class="reviews__container">
+    <div class="reviews__container page__centerer">
       <h2 class="reviews__title heading heading--level_2">Отзывы</h2>
       <figure class="reviews__quote quote">
         <blockquote class="quote__text">
