--- a/source/index.html
+++ b/source/index.html
@@ -50,8 +50,8 @@
       </div>
     </div>
   </section>
-  <section class="about">
-    <div class="about__container page__centerer">
+  <section class="about page__centerer">
+    <div class="about__container">
       <h2 class="about__title heading heading--level_2">Коротко о нас:</h2>
       <ul class="about__list advantage">
         <li class="advantage__item">
@@ -101,8 +101,8 @@
     </div>
   </section>
   <article class="contacts">
-    <h2 class="contacts__title contacts__container ">Контакты</h2>
-    <address class="contacts__address address contacts__container ">
+    <h2 class="contacts__title contacts__container page__centerer">Контакты</h2>
+    <address class="contacts__address address contacts__container page__centerer">
       <dl class="contacts__list">
         <dt class="address__email">e-mail:</dt>
         <dd><a class="address__link link-address" href="info@mimimishkashop.ru">info@mimimishkashop.ru</a></dd>
