--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,9 +4,9 @@
 
 {% block main %}
 
-<main class="catalog-page page-centerer">
+<main class="catalog-page">
   <h1 class="catalog-page__title catalog-title heading">Каталог товаров</h1>
-  <section class="catalog-page__products catalog-products">
+  <section class="catalog-page__products catalog-products page__centerer">
     <h2 class="visually-hidden">Карточки товаров</h2>
     <ul class="catalog-products__list cards-wrapper">
       <li class="catalog-products__item card-product">
@@ -73,7 +73,7 @@
     </ul>
   </section>
   <article class="catalog-page__production production">
-    <div class="production__container production-container">
+    <div class="production__container production-container page__centerer">
       <div class="production-container__content">
         <h2 class="production__title heading heading--level_3">Процесс производства</h2>
         <span class="production__content video-description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о
