--- a/source/index.html
+++ b/source/index.html
@@ -50,8 +50,8 @@
       </div>
     </div>
   </section>
-  <section class="about page__centerer">
-    <div class="about__container">
+  <section class="about">
+    <div class="about__container page__centerer">
       <h2 class="about__title heading heading--level_2">Коротко о нас:</h2>
       <ul class="about__list advantage">
         <li class="advantage__item">
