--- a/source/index.html
+++ b/source/index.html
@@ -5,24 +5,24 @@
 {% block main %}
 
 <main class="main-container">
-  <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka"</h1
-    <section class="products">
-      <h2 class="products__title heading page__centerer">Милые штуки ручной работы для дома</h2>
-      <div class="page__centerer page__centerer--desktop_on">
-        <ul class="products__list products-list ">
-          <li class="products-list__item products-list__item--icon_interior">
-            <a class="products-list__link " href="#">Предметы интерьера</a>
-          </li>
-          <li class="products-list__item products-list__item--icon_toy">
-            <a class="products-list__link" href="#">Детские игрушки</a>
-          </li>
-        </ul>
-      </div>
-    </section>
+  <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka"</h1>
+  <section class="products">
+    <h2 class="products__title heading page__centerer">Милые штуки ручной работы для дома</h2>
+    <div class="page__centerer page__centerer--desktop_on">
+      <ul class="products__list products-list ">
+        <li class="products-list__item">
+          <a class="products-list__link products-list__link--icon_interior" href="#">Предметы интерьера</a>
+        </li>
+        <li class="products-list__item">
+          <a class="products-list__link products-list__link--icon_toy" href="#">Детские игрушки</a>
+        </li>
+      </ul>
+    </div>
+  </section>
   <section class="featured line-decor line-decor--bottom page__centerer">
     <div class="featured__container ">
       <h2 class="visually-hidden">Описание</h2>
-      <div class="featured__product product page__centerer">
+      <div class="featured__product product">
         <h3 class="product__title heading heading--level_2">Вязаные корзинки</h3>
         <span class="product__label card-label">Товар недели</span>
         <div class="product__description-container">
