--- a/source/index.html
+++ b/source/index.html
@@ -11,10 +11,10 @@
     <div class="page__centerer page__centerer--desktop_on">
       <ul class="products__list products-list ">
         <li class="products-list__item">
-          <a class="products-list__link products-list__link--icon_interior" href="#">Предметы интерьера</a>
+          <a class="products-list__link products-list__link--icon_interior" href="#">Предметы<br> интерьера</a>
         </li>
         <li class="products-list__item">
-          <a class="products-list__link products-list__link--icon_toy" href="#">Детские игрушки</a>
+          <a class="products-list__link products-list__link--icon_toy" href="#">Детские<br> игрушки</a>
         </li>
       </ul>
     </div>
